# renderling

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DEVLOG.md  LICENSE  NODES.md  NOTES.md  README.md  bin_lights.wgsl.txt  clippy.toml  rustfmt.toml  spin_lock.wgsl
crates/core/: Cargo.toml
crates/core/src/: lib.rs  light.rs
crates/craballoc/: Cargo.toml
crates/craballoc/src/: lib.rs  range.rs  runtime.rs  slab.rs  value.rs
crates/craballoc/src/slab/: wgpu_slab.rs
crates/crabslab/: Cargo.toml  README.md
crates/crabslab-derive/: Cargo.toml
crates/crabslab-derive/src/: lib.rs
crates/crabslab/src/: array.rs  id.rs  lib.rs  slab.rs  wgpu_slab.rs
crates/example/: Cargo.toml
crates/example-culling/: Cargo.toml
crates/example-culling/src/: main.rs
crates/example-gltf/: Cargo.toml
crates/example-gltf/src/: example.rs  gltf.rs  main.rs  triangle.rs
crates/example-wasm/: Cargo.toml  index.html
crates/example-wasm/src/: event.rs  lib.rs  req_animation_frame.rs
crates/example/src/: blinn_phong.rs  camera.rs  demo.rs  gltf.rs  lib.rs  main.rs  time.rs  utils.rs
crates/example/src/gltf/: ui.rs
crates/examples/: Cargo.toml
crates/examples/blinn-phong/: Cargo.toml
crates/examples/blinn-phong/src/: main.rs
crates/examples/src/: context.rs  gltf.rs  lib.rs  lighting.rs  skybox.rs  stage.rs
crates/forward/: Cargo.toml
crates/forward/src/: forward.frag  forward.frag.spv  forward.vert  forward.vert.spv  lib.rs
crates/img-diff/: Cargo.toml
crates/img-diff/src/: lib.rs
crates/loading-bytes/: Cargo.toml  README.md
crates/loading-bytes/src/: lib.rs
crates/moongraph/: Cargo.toml
crates/moongraph-macros/: Cargo.toml
crates/moongraph-macros/src/: lib.rs
crates/moongraph/src/: lib.rs
crates/renderling/: Cargo.toml  cmy_triangle_renderer.dot  webdriver.json
crates/renderling-build/: Cargo.toml
crates/renderling-build/src/: lib.rs
crates/renderling-gpui/: Cargo.toml
crates/renderling-gpui/src/: elements.rs  lib.rs  text.rs
crates/renderling-shader/: Cargo.toml
crates/renderling-shader-core/: Cargo.toml
crates/renderling-shader-core/src/: lib.rs
crates/renderling-shader-sdf/: Cargo.toml
crates/renderling-shader-sdf/src/: helper.rs  lib.rs
crates/renderling-shader/src/: .#skybox.rs  array.rs  bits.rs  convolution.rs  debug.rs  gltf.rs  id.rs  lib.rs  light.rs  math.rs  mesh.rs  mod.rs  pbr.rs  phong.rs  primitive.rs  scene.rs  sdf.rs  skybox.rs  slab.rs  stage.rs  texture.rs  tonemapping.rs  tutorial.rs  ui.rs
crates/renderling-shader/src/pbr/: debug.rs
crates/renderling-shader/src/scene/: id.rs  texture.rs  wrap.rs
crates/renderling-shader/src/sdf/: helper.rs  raymarch.rs
crates/renderling-shader/src/stage/: light.rs  texture.rs
crates/renderling-ui/: Cargo.toml  README.md
crates/renderling-ui/src/: lib.rs  path.rs  renderer.rs  test.rs  text.rs
crates/renderling/benches/: benchmarks.rs
crates/renderling/shaders/: atlas-atlas_blit_fragment.spv  atlas-atlas_blit_fragment.wgsl  atlas-atlas_blit_vertex.spv  atlas-atlas_blit_vertex.wgsl  atlas-shader-atlas_blit_fragment.spv  atlas-shader-atlas_blit_vertex.spv  bloom-bloom_downsample_fragment.spv  bloom-bloom_downsample_fragment.wgsl  bloom-bloom_mix_fragment.spv  bloom-bloom_mix_fragment.wgsl  bloom-bloom_upsample_fragment.spv  bloom-bloom_upsample_fragment.wgsl  bloom-bloom_vertex.spv  bloom-bloom_vertex.wgsl  bloom-shader-bloom_downsample_fragment.spv  bloom-shader-bloom_mix_fragment.spv  bloom-shader-bloom_upsample_fragment.spv  bloom-shader-bloom_vertex.spv  bloom-shaders-bloom_downsample_fragment.spv  bloom-shaders-bloom_mix_fragment.spv  bloom-shaders-bloom_upsample_fragment.spv  bloom-shaders-bloom_vertex.spv  compositor-compositor_fragment.spv  compositor-compositor_vertex.spv  convolution-brdf_lut_convolution_fragment.spv  convolution-brdf_lut_convolution_fragment.wgsl  convolution-brdf_lut_convolution_vertex.spv  convolution-brdf_lut_convolution_vertex.wgsl  convolution-generate_mipmap_fragment.wgsl  convolution-generate_mipmap_vertex.spv  convolution-generate_mipmap_vertex.wgsl  convolution-prefilter_environment_cubemap_fragment.spv  convolution-prefilter_environment_cubemap_fragment.wgsl  convolution-prefilter_environment_cubemap_vertex.spv  convolution-prefilter_environment_cubemap_vertex.spv.license  convolution-prefilter_environment_cubemap_vertex.wgsl  convolution-shader-brdf_lut_convolution_fragment.spv  convolution-shader-brdf_lut_convolution_vertex.spv  convolution-shader-generate_mipmap_fragment.spv  convolution-shader-generate_mipmap_vertex.spv  (+95 more)
crates/renderling/src/: atlas.rs  bank.rs  bindgroup.rs  bits.rs  bloom.rs  buffer_array.rs  build.rs  bvol.rs  camera.rs  color.rs  compositor.rs  context.rs  convolution.rs  cubemap.rs  cull.rs  debug.rs  diffuse_irradiance.rs  draw.rs  draw_indirect.rs  forward.rs  frame.rs  gbuffer.rs  geometry.rs  gltf.rs  gltf_support.rs  hdr.rs  id.rs  img_diff.rs  internal.rs  lib.rs  light.rs  linkage.rs  managment.rs  material.rs  math.rs  mesh.rs  node.rs  object.rs  pbr.rs  pipeline.rs  (+22 more)
crates/renderling/src/atlas/: atlas_image.rs  cpu.rs  shader.rs
crates/renderling/src/bloom/: cpu.rs  shader.rs
crates/renderling/tests/: wasm.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: main.rs
crates/sdfshop/: Cargo.toml  index.html
crates/sdfshop/src/: lib.rs  main.rs  wgsl.rs
crates/ui/: Cargo.toml  build.rs
crates/ui/src/: lib.rs  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
crates/wgsly/: Cargo.toml
crates/wgsly-macros/: Cargo.toml
crates/wgsly-macros/src/: lib.rs  syntax.rs
crates/wgsly/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: deps.rs  main.rs  server.rs
gltf/: cube.glb  (+26 more)
shaders/: Cargo.toml  build.rs  rust-toolchain  rust-toolchain.toml
shaders/renderling-pbr-shader/: Cargo.toml
shaders/renderling-pbr-shader/src/: lib.rs
shaders/renderling-ui-shader/: Cargo.toml
shaders/renderling-ui-shader/src/: lib.rs
shaders/shader-crate/: Cargo.toml
shaders/shader-crate/src/: lib.rs  pbr.rs  ui.rs
shaders/src/: main.rs  shader.rs
(+342 files in other folders)
