[workspace]
members = [
    "crates/example", 
    "crates/example-culling",
    "crates/example-wasm",
    "crates/loading-bytes",
    "crates/renderling", 
    "crates/renderling-build",
    "crates/renderling-ui",
    "crates/sandbox",
    "crates/xtask"
]

exclude = ["./shaders"]

resolver = "2"

[workspace.dependencies]
assert_approx_eq = "1.1.0"
async-channel = "1.8"
bytemuck = { version = "1.13.0", features = ["derive"] }
clap = { version = "4.5.23", features = ["derive"] }
cfg_aliases = "0.2"
crabslab = { version = "0.6.2", default-features = false }
ctor = "0.2.2"
dagga = "0.2.1"
env_logger = "0.10.0"
futures-lite = "1.13"
glam = { version = "0.29", default-features = false }
gltf = { version = "1.4,1", features = ["KHR_lights_punctual", "KHR_materials_unlit", "KHR_materials_emissive_strength", "extras", "extensions"] }
image = "0.25"
log = "0.4"
naga = { version = "23.0.0", features = ["spv-in", "wgsl-out", "wgsl-in", "msl-out"] }
pretty_assertions = "1.4.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
rustc-hash = "1.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.117"
send_wrapper = "0.6.0"
snafu = "0.7"
syn = { version = "2.0", features = ["full", "extra-traits", "parsing"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
winit = { version = "0.30" }
wgpu = "23.0.0"


[profile.dev]
opt-level = 1

[profile.dev.package.image]
opt-level = 3

[profile.dev.package.gltf]
opt-level = 3

[patch.crates-io]
naga = { git = "https://github.com/gfx-rs/wgpu.git" }
wgpu = { git = "https://github.com/gfx-rs/wgpu.git" }
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu" }
