[package]
name = "shaders"
version = "0.1.0"
edition = "2021"
description = "Generates the shader .spv files for the renderling project"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spirv-builder = "^0.6"

# Compile build-dependencies in release mode with
# the same settings as regular dependencies.
[profile.release.build-override]
opt-level = 3
codegen-units = 16
[profile.dev.build-override]
opt-level = 3