[package]
name = "shaders"
version = "0.1.0"
edition = "2021"
description = "Generates shader .spv files from rust-gpu shader crates"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
env_logger = "^0.10"
log = "^0.4"
spirv-builder = "^0.9"

# Compile build-dependencies in release mode with
# the same settings as regular dependencies.
[profile.release.build-override]
opt-level = 3
codegen-units = 16
[profile.dev.build-override]
opt-level = 3