[package]
name = "renderling_core"
version = "0.1.0"
edition = "2018"
description = "Types shared by renderlings"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.7.2", features = ["derive"] }
wgpu = { version = "^0.10" }
