[package]
name = "renderling_core"
version = "0.1.3"
edition = "2018"
description = "Types shared by renderling pipelines"
repository = "https://github.com/schell/renderling"
license = "MIT OR Apache-2.0"
keywords = ["game", "graphics", "shader", "rendering"]
categories = ["rendering", "game-development", "graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
wasm = ["wgpu/webgl"]

[dependencies]
bytemuck = { version = "1.7.2", features = ["derive"] }
wgpu = { version = "^0.13" }
