[package]
name = "crabslab-derive"
version = "0.1.0"
edition = "2021"
description = "Slab allocator focused on GPU compute (rust-gpu)"
repository = "https://github.com/schell/renderling"
license = "MIT OR Apache-2.0"
keywords = ["game", "graphics", "shader", "rendering"]
categories = ["rendering", "game-development", "graphics"]
readme = "../crabslab/README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
bench = false

[dependencies]
proc-macro2 = "^1.0"
quote = "^1.0"
syn = { version = "^2.0", features = ["extra-traits", "parsing"] }
