[package]
name = "crabslab"
version = "0.1.0"
edition = "2021"
description = "Slab allocator focused on GPU compute (rust-gpu)"
repository = "https://github.com/schell/renderling"
license = "MIT OR Apache-2.0"
keywords = ["game", "graphics", "shader", "rendering"]
categories = ["rendering", "game-development", "graphics"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["wgpu", "glam", "futures-lite"]
futures-lite = ["dep:futures-lite"]
glam = ["dep:glam"]
wgpu = ["dep:wgpu", "dep:bytemuck", "dep:snafu", "dep:async-channel", "dep:log"]

[dependencies]
async-channel = {workspace=true, optional=true}
bytemuck = {workspace=true, optional=true}
futures-lite = {workspace=true, optional=true}
log = {workspace=true, optional=true}
crabslab-derive = { version = "0.1.0", path = "../crabslab-derive" }
snafu = {workspace=true, optional=true}
wgpu = {workspace=true, optional=true}

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
glam = { workspace = true, features = ["std"], optional = true }

[target.'cfg(target_arch = "spirv")'.dependencies]
glam = { version = "0.24.2", default-features = false, features = ["libm"], optional = true }
