[package]
name = "example-gltf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.7.3", features = ["derive"] }
env_logger = "0.10.0"
futures-lite = "1.12.0"
log = "0.4.17"
gltf = "^1.0"
nalgebra = "^0.30"
renderling = { path = "../renderling" }
winit = "^0.27"
wgpu = "^0.14"