[package]
name = "example-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
console_log = "^0.2"
console_error_panic_hook = "^0.1"
example = { path = "../example" }
fern = "0.6"
renderling = { path = "../renderling", features = ["wasm"] }
renderling-gpui = { path = "../renderling-gpui" }
wasm-bindgen = "^0.2"
wasm-bindgen-futures = "^0.4"
wasm-bindgen-test = "^0.3"
web-sys = { version = "^0.3", features = ["Document", "Element", "HtmlElement", "Window"] }

gltf = { workspace = true }
log = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }