# SPDX-FileCopyrightText: 2024 Schell Scivally <efsubenovex@gmail.com>>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "example-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_log = "^0.2"
console_error_panic_hook = "^0.1"
example = { path = "../example" }
fern = "0.6"
futures-lite = { workspace = true }
gltf = { workspace = true }
log = { workspace = true }
renderling = { path = "../renderling", features = ["wasm"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-bindgen-test = "^0.3"
web-sys = { workspace = true, features = ["Document", "Element", "Event", "HtmlCanvasElement", "HtmlElement", "Window"] }
wgpu = { workspace = true }
