[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
source = "lib.rs"

[[bin]]
name = "example"
source = "main.rs"

[dependencies]
clap = { version = "^4.3", features = ["derive"] }
env_logger = {workspace=true}
futures-lite = {workspace=true}
gltf = { workspace = true }
icosahedron = "^0.1"
instant = "^0.1"
log = { workspace = true }
renderling = { path = "../renderling" }
loading-bytes = { path = "../loading-bytes" }
wasm-bindgen = "^0.2"
wasm-bindgen-futures = "^0.4"
winit = { workspace = true }
wgpu = { workspace = true }

[dev-dependencies]
image = { workspace = true }
img-diff = { path = "../img-diff" }
