[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
source = "lib.rs"

[[bin]]
name = "example"
source = "main.rs"

[dependencies]
clap = { version = "^4.3", features = ["derive"] }
env_logger = {workspace=true}
futures-lite = {workspace=true}
gltf = { workspace = true }
icosahedron = "0.1"
lazy_static = "1.4.0"
log = { workspace = true }
renderling = { path = "../renderling" }
loading-bytes = { path = "../loading-bytes" }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "^0.4"
web-sys = { workspace = true, features = ["Performance", "Window"] }
winit = { workspace = true }
wgpu = { workspace = true }

[dev-dependencies]
image = { workspace = true }
img-diff = { path = "../img-diff" }
