[package]
name = "examples"
version = "0.1.0"
edition = "2024"

[dependencies]
doc-comment = "0.3"
env_logger.workspace = true
futures-lite.workspace = true
renderling = { path = "../renderling", features = ["test-utils"] }
renderling_build = { path = "../renderling-build" }
tokio = { workspace = true, features = ["full"] }
wgpu.workspace = true
