[package]
name = "renderling_forward"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
bytemuck = { version = "1.7.2", features = ["derive"] }
renderling_core = { path = "../core", version = "^0.1" }
shaderc = "0.7.2"
tracing = "^0.1"
tracing-log = "^0.1"
wgpu = { version = "^0.10", features = ["spirv"] }

[build-dependencies]
renderling_build = { path = "../build" }
