[package]
name = "renderling_forward"
version = "0.2.0"
edition = "2018"
description = "A forward shading WGPU rendering pipeline"
repository = "https://github.com/schell/renderling"
license = "MIT OR Apache-2.0"
keywords = ["shader", "forward", "3d", "lighting"]
categories = ["rendering", "game-development", "graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
wasm = ["wgpu/webgl", "renderling_core/wasm"]

[dependencies]
anyhow = "^1.0"
bytemuck = { version = "1.7.2", features = ["derive"] }
renderling_core = { path = "../core", version = "^0.1.2" }
tracing = "^0.1"
tracing-log = "^0.1"
wgpu = { version = "^0.12", features = ["spirv"] }

[build-dependencies]
renderling_build = { path = "../build", version = "^0.1" }
