# SPDX-FileCopyrightText: 2024 Schell Scivally <efsubenovex@gmail.com>>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "img-diff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { workspace = true, features = ["std"] }
image = { version = "^0.24" }
snafu = "^0.7"
