[package]
name = "loading-bytes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-fs = "1.6"
js-sys = "0.3"
snafu = {workspace = true}
wasm-bindgen = {workspace = true}
wasm-bindgen-futures = {workspace = true}
web-sys = { workspace = true, features = ["Request", "RequestInit", "Response"] }
