# SPDX-FileCopyrightText: 2024 Schell Scivally <efsubenovex@gmail.com>>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "loading-bytes"
version = "0.1.1"
edition = "2021"
description = "Load bytes from paths on native and WASM"
repository = "https://github.com/schell/renderling"
license = "MIT OR Apache-2.0"
keywords = ["image", "font", "binary", "loading", "bytes"]
categories = ["webassembly", "filesystem", "asynchronous"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-fs = "1.6"
js-sys = "0.3"
send_wrapper = {workspace=true}
snafu = {workspace = true}
wasm-bindgen = {workspace = true}
wasm-bindgen-futures = {workspace = true}
web-sys = { workspace = true, features = ["Request", "RequestInit", "Response"] }
