[package]
name = "moongraph"
version = "0.1.0"
edition = "2021"
description = "Schedules and runs DAGs accessing shared resources. 🌙"
repository = "https://github.com/schell/renderling"
license = "MIT OR Apache-2.0"
keywords = ["dag", "graph", "rendergraph", "schedule"]
categories = ["rendering", "game-development", "algorithms"]
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
dot = ["dagga/dot"]

[dependencies]
broomdog = "^0.1"
dagga = { version = "^0.2", default-features = false }
log = "0.4.17"
moongraph-macros = { path = "../moongraph-macros", version = "^0.1" }
snafu = "0.7.4"
