[package]
name = "renderling-gpui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["winit"]
winit = ["renderling/winit", "dep:winit"]

[dependencies]
image = { version = "^0.24" }
log = "^0.4"
renderling = { path = "../renderling", default-features = false, features = ["text"] }
snafu = "^0.7"
winit = { version = "^0.27", optional = true }

glam = { workspace = true, default-features = false, features = ["bytemuck", "libm"] }
wgpu = { workspace = true }

[dev-dependencies]
env_logger = "^0.10"
img-diff = { path = "../img-diff" }