[package]
name = "renderling-gpui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["winit"]
winit = ["renderling/winit", "dep:winit"]

[dependencies]
ab_glyph = { version = "0.2" }
crabslab = "0.1.3"
glam = { workspace = true, default-features = false, features = ["bytemuck", "libm"] }
glyph_brush = { version = "0.7" }
image = { version = "^0.24" }
log = "^0.4"
renderling = { path = "../renderling" }
snafu = "^0.7"
wgpu = { workspace = true }
winit = { version = "^0.27", optional = true }

[dev-dependencies]
env_logger = {workspace = true}
img-diff = { path = "../img-diff" }