[package]
name = "renderling-shader-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "dylib"]

[dependencies]
spirv-std = "0.9"

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
glam = { workspace = true, features = ["std"] }
crabslab = { workspace = true, features = ["default"] }

[target.'cfg(not(target_arch = "spirv"))'.dev-dependencies]
glam = { workspace = true, features = ["std", "debug-glam-assert"] }

[target.'cfg(target_arch = "spirv")'.dependencies]
glam = { version = "0.24.2", default-features = false, features = ["libm"] }
crabslab = { workspace = true, features = ["glam"]  }
