[package]
name = "renderling-shader-sdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
renderling-shader-core = { version = "0.1.0", path = "../renderling-shader-core" }
spirv-std = "0.9"

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
glam = { workspace = true, features = ["std"] }
crabslab = { workspace = true, features = ["default", "wgpu"] }

[target.'cfg(not(target_arch = "spirv"))'.dev-dependencies]
glam = { workspace = true, features = ["std", "debug-glam-assert"] }

[target.'cfg(target_arch = "spirv")'.dependencies]
glam = { version = "0.24.2", default-features = false, features = ["libm"] }
crabslab = { workspace = true, features = ["glam"]  }

[dev-dependencies]
env_logger = {workspace = true}
image = { workspace = true }
img-diff = { path = "../img-diff" }
log = {workspace = true}
renderling = { path = "../renderling" }
ttf-parser = "0.20.0"
wgpu = { workspace = true }