[package]
name = "renderling-shader"
version = "0.1.0"
edition = "2021"
description = "Shared types and functions for renderling shaders compiled w/ rust-gpu and wgpu linkage"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[features]
default = []

[dependencies]
spirv-std = "0.9"

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
glam = { workspace = true }
crabslab = { version = "0.1.0", path = "../crabslab" }

[target.'cfg(not(target_arch = "spirv"))'.dev-dependencies]
glam = { workspace = true, features = ["debug-glam-assert"] }

[target.'cfg(target_arch = "spirv")'.dependencies]
glam = { version = "0.24.2", default-features = false, features = ["libm"] }
crabslab = { version = "0.1.0", path = "../crabslab", default-features = false }

[dev-dependencies]
image = { workspace = true }
img-diff = { path = "../img-diff" }