[package]
name = "renderling-shader"
version = "0.1.0"
edition = "2021"
description = "Shared types and functions for renderling shaders compiled w/ rust-gpu and wgpu linkage"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "dylib"]

[features]
default = []

[dependencies]
renderling-shader-core = { version = "0.1.0", path = "../renderling-shader-core" }
renderling-shader-sdf = { version = "0.1.0", path = "../renderling-shader-sdf" }
renderling-shader-pbr = { version = "0.1.0", path = "../renderling-shader-pbr" }
spirv-std = "0.9"

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
glam = { workspace = true, features = ["std"] }
crabslab = { workspace = true, features = ["default"] }

[target.'cfg(not(target_arch = "spirv"))'.dev-dependencies]
glam = { workspace = true, features = ["std", "debug-glam-assert"] }

[target.'cfg(target_arch = "spirv")'.dependencies]
glam = { version = "0.24.2", default-features = false, features = ["libm"] }
crabslab = { workspace = true, features = ["glam"]  }

[dev-dependencies]
bytemuck = {workspace = true}
image = {workspace = true}
img-diff = { path = "../img-diff" }