[package]
name = "renderling-shader"
version = "0.1.0"
edition = "2021"
description = "Shared types and functions for renderling shaders compiled w/ rust-gpu and wgpu linkage"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "dylib"]

[features]
default = ["uber"]
uber = ["gltf", "pbr", "sdf"]
gltf = []
pbr = []
sdf = []

[dependencies]
spirv-std = "0.9"

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
glam = { workspace = true, features = ["std"] }
crabslab = { workspace = true, features = ["default"] }

[target.'cfg(not(target_arch = "spirv"))'.dev-dependencies]
glam = { workspace = true, features = ["std", "debug-glam-assert"] }

[target.'cfg(target_arch = "spirv")'.dependencies]
glam = { version = "0.24.2", default-features = false, features = ["libm"] }
crabslab = { workspace = true, features = ["glam"]  }

[dev-dependencies]
assert_approx_eq = {workspace = true}
bytemuck = {workspace = true}
env_logger = {workspace = true}
image = { workspace = true }
img-diff = { path = "../img-diff" }
log = {workspace = true}
renderling = { path = "../renderling" }
ttf-parser = "0.20.0"
wgpu = { workspace = true }