[package]
name = "renderling-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
crabslab = {workspace = true}
bytemuck = {workspace = true}
glyph_brush = "0.7.8"
image = {workspace=true}
log = {workspace=true}
lyon = "1.0.1"
renderling = {path = "../renderling"}
rustc-hash = {workspace = true}
wgpu = {workspace = true}

[dev-dependencies]
ctor = {workspace = true}
env_logger = {workspace = true}
img-diff = {path = "../img-diff"}
