[package]
name = "renderling_ui"
version = "0.3.5"
edition = "2021"
description = "User-friendly real-time 2d rendering. 🍖"
repository = "https://github.com/schell/renderling"
license = "MIT OR Apache-2.0"
keywords = ["game", "graphics", "shader", "rendering"]
categories = ["rendering", "game-development", "graphics"]
readme = "README.md"

[dependencies]
crabslab = {workspace = true}
glyph_brush = "0.7.8"
image = {workspace=true}
loading-bytes = {version = "0.1.1", path = "../loading-bytes"}
log = {workspace=true}
lyon = "1.0.1"
renderling = {version = "0.4.8", path = "../renderling"}
rustc-hash = {workspace = true}
snafu = {workspace = true}
wgpu = {workspace = true}

[dev-dependencies]
ctor = {workspace = true}
env_logger = {workspace = true}
futures-lite = {workspace = true}
img-diff = {path = "../img-diff"}
