[package]
name = "renderling"
version = "0.4.9"
edition = "2021"
description = "User-friendly real-time rendering. 🍖"
repository = "https://github.com/schell/renderling"
license = "MIT OR Apache-2.0"
keywords = ["game", "graphics", "shader", "rendering"]
categories = ["rendering", "game-development", "graphics"]
readme = "../../README.md"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["gltf", "tutorial", "winit"]
gltf = ["dep:gltf", "dep:serde_json"]
# optional shaders
array_test = []
test_i8_i16_extraction = []
test_spirv_atomics = []
tutorial = []

wasm = ["wgpu/fragile-send-sync-non-atomic-wasm"]

[build-dependencies]
naga = {workspace = true}
pathdiff = "0.2.2"
quote = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = {workspace = true}

# dependencies for CPU and GPU code
[dependencies]
spirv-std = { version = "0.9" }

# dependencies for GPU code
[target.'cfg(target_arch = "spirv")'.dependencies]
crabslab = { workspace = true, features = ["glam"]  }
half = { version = "2.3", default-features = false }
glam = { workspace = true, default-features = false, features = ["libm"] }

# dependencies for CPU code
[target.'cfg(not(target_arch = "spirv"))'.dependencies]
async-channel = {workspace = true}
bytemuck = {workspace = true}
crabslab = { workspace = true, features = ["default"] }
dagga = {workspace=true}
crunch = "0.5"
futures-lite = {workspace=true}
glam = { workspace = true, features = ["std"] }
gltf = {workspace = true, optional = true}
half = "2.3"
image = {workspace = true, features = ["hdr"]}
log = {workspace = true}
rustc-hash = {workspace = true}
serde_json = {workspace = true, optional = true}
snafu = {workspace = true}
wgpu = { workspace = true, features = ["spirv"] }
winit = { workspace = true, optional = true }

[dev-dependencies]
assert_approx_eq = {workspace = true}
ctor = "0.2.2"
env_logger = {workspace = true}
example = { path = "../example" }
fastrand = "2.1.1"
icosahedron = "0.1"
img-diff = { path = "../img-diff" }
naga.workspace = true
pretty_assertions.workspace = true
ttf-parser = "0.20.0"
winit.workspace = true

[target.'cfg(not(target_arch = "spirv"))'.dev-dependencies]
glam = { workspace = true, features = ["std", "debug-glam-assert"] }
