[package]
name = "renderling"
version = "0.6.0"
edition = "2021"
description = "User-friendly real-time rendering. 🍖"
repository = "https://github.com/schell/renderling"
license = "MIT OR Apache-2.0"
keywords = ["game", "graphics", "shader", "rendering"]
categories = ["rendering", "game-development", "graphics"]
readme = "../../README.md"
build = "src/build.rs"

[package.metadata.rust-gpu.install]
auto-install-rust-toolchain = true

[package.metadata.rust-gpu.build]
output-dir = "shaders" 
multimodule = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["gltf", "ui", "winit"]
gltf = ["dep:gltf", "dep:serde_json"]
test_i8_i16_extraction = []
ui = ["dep:glyph_brush", "dep:loading-bytes", "dep:lyon"]
wasm = ["wgpu/fragile-send-sync-non-atomic-wasm"]
debug-slab = []
light-tiling-stats = [ "dep:plotters" ]

[build-dependencies]
cfg_aliases.workspace = true
naga.workspace = true
pathdiff = "0.2.2"
quote.workspace = true
renderling_build = { path = "../renderling-build", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
similarity.workspace = true

# dependencies for CPU and GPU code
[dependencies]
spirv-std.workspace = true

# dependencies for GPU code
[target.'cfg(target_arch = "spirv")'.dependencies]
crabslab = { workspace = true, features = ["glam"]  }
glam = { workspace = true, default-features = false, features = ["libm"] }

# dependencies for CPU code
[target.'cfg(not(target_arch = "spirv"))'.dependencies]
async-channel = {workspace = true}
bytemuck = {workspace = true}
craballoc.workspace = true
crabslab = { workspace = true, features = ["default"] }
dagga = {workspace=true}
crunch = "0.5"
futures-lite = {workspace=true}
glam = { workspace = true, features = ["std"] }
gltf = {workspace = true, optional = true}
glyph_brush = {workspace = true, optional = true}
half = "2.3"
image = {workspace = true, features = ["hdr"]}
loading-bytes = { workspace = true, optional = true }
log = {workspace = true}
lyon = {workspace = true, optional = true}
plotters = { workspace = true, optional = true }
pretty_assertions.workspace = true
rustc-hash = {workspace = true}
serde_json = {workspace = true, optional = true}
snafu = {workspace = true}
wgpu = { workspace = true, features = ["spirv"] }
winit = { workspace = true, optional = true }

[dev-dependencies]
assert_approx_eq.workspace = true
ctor = "0.2.2"
env_logger.workspace = true
example = { path = "../example" }
fastrand = "2.1.1"
human-repr = "1.1.0"
icosahedron = "0.1"
img-diff = { path = "../img-diff" }
naga.workspace = true
ttf-parser = "0.20.0"
wgpu-core.workspace = true
winit.workspace = true

[target.'cfg(not(target_arch = "spirv"))'.dev-dependencies]
glam = { workspace = true, features = ["std", "debug-glam-assert"] }

[target.'cfg(target_os = "macos")'.dev-dependencies]
metal.workspace = true
